{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 59,
  "lineage": "65c7d28f-3988-5473-9084-7473818f0a5a",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "linux-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9d715255-9de8-4083-a909-9f0ab13af1c6/resourceGroups/network_rg/providers/Microsoft.Network/networkInterfaces/n01610235-u-vm1-nic",
            "internal_domain_name_suffix": "u2csgdp2m4juxjqscfvmmlczdf.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "n01610235-u-vm1-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/9d715255-9de8-4083-a909-9f0ab13af1c6/resourceGroups/network_rg/providers/Microsoft.Network/virtualNetworks/network_vnet/subnets/network_subnet1"
              }
            ],
            "location": "canadacentral",
            "mac_address": "60-45-BD-5E-03-0D",
            "name": "n01610235-u-vm1-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "network_rg",
            "virtual_machine_id": "/subscriptions/9d715255-9de8-4083-a909-9f0ab13af1c6/resourceGroups/network_rg/providers/Microsoft.Compute/virtualMachines/n01610235-u-vm1"
          },
          "dependencies": [
            "azurerm_resource_group.network_rg",
            "azurerm_subnet.network_subnet1",
            "azurerm_virtual_network.network_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "network_nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9d715255-9de8-4083-a909-9f0ab13af1c6/resourceGroups/network_rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "location": "canadacentral",
            "name": "network-nsg1",
            "resource_group_name": "network_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "network_nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9d715255-9de8-4083-a909-9f0ab13af1c6/resourceGroups/network_rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "location": "canadacentral",
            "name": "network-nsg2",
            "resource_group_name": "network_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5985",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule2",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.network_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "linux_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/9d715255-9de8-4083-a909-9f0ab13af1c6/resourceGroups/network_rg/providers/Microsoft.Network/publicIPAddresses/n01610235-u-vm1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "n01610235-u-vm1",
            "resource_group_name": "network_rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "network_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9d715255-9de8-4083-a909-9f0ab13af1c6/resourceGroups/network_rg/providers/Microsoft.Network/virtualNetworks/network_vnet/subnets/network_subnet1",
            "name": "network_subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network_rg",
            "virtual_network_name": "network_vnet"
          },
          "dependencies": [
            "azurerm_resource_group.network_rg",
            "azurerm_virtual_network.network_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "network_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9d715255-9de8-4083-a909-9f0ab13af1c6/resourceGroups/network_rg/providers/Microsoft.Network/virtualNetworks/network_vnet/subnets/network_subnet2",
            "name": "network_subnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "network_rg",
            "virtual_network_name": "network_vnet"
          },
          "dependencies": [
            "azurerm_resource_group.network_rg",
            "azurerm_virtual_network.network_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "network-ansg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9d715255-9de8-4083-a909-9f0ab13af1c6/resourceGroups/network_rg/providers/Microsoft.Network/virtualNetworks/network_vnet/subnets/network_subnet1",
            "network_security_group_id": "/subscriptions/9d715255-9de8-4083-a909-9f0ab13af1c6/resourceGroups/network_rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1",
            "subnet_id": "/subscriptions/9d715255-9de8-4083-a909-9f0ab13af1c6/resourceGroups/network_rg/providers/Microsoft.Network/virtualNetworks/network_vnet/subnets/network_subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.network_nsg1",
            "azurerm_resource_group.network_rg",
            "azurerm_subnet.network_subnet1",
            "azurerm_virtual_network.network_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "network-ansg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9d715255-9de8-4083-a909-9f0ab13af1c6/resourceGroups/network_rg/providers/Microsoft.Network/virtualNetworks/network_vnet/subnets/network_subnet2",
            "network_security_group_id": "/subscriptions/9d715255-9de8-4083-a909-9f0ab13af1c6/resourceGroups/network_rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2",
            "subnet_id": "/subscriptions/9d715255-9de8-4083-a909-9f0ab13af1c6/resourceGroups/network_rg/providers/Microsoft.Network/virtualNetworks/network_vnet/subnets/network_subnet2"
          },
          "dependencies": [
            "azurerm_network_security_group.network_nsg2",
            "azurerm_resource_group.network_rg",
            "azurerm_subnet.network_subnet2",
            "azurerm_virtual_network.network_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "network_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0d2305a7-67fc-4b93-a612-116ac62c591d",
            "id": "/subscriptions/9d715255-9de8-4083-a909-9f0ab13af1c6/resourceGroups/network_rg/providers/Microsoft.Network/virtualNetworks/network_vnet",
            "location": "canadacentral",
            "name": "network_vnet",
            "resource_group_name": "network_rg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/9d715255-9de8-4083-a909-9f0ab13af1c6/resourceGroups/network_rg/providers/Microsoft.Network/virtualNetworks/network_vnet/subnets/network_subnet1",
                "name": "network_subnet1",
                "security_group": "/subscriptions/9d715255-9de8-4083-a909-9f0ab13af1c6/resourceGroups/network_rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg1"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/9d715255-9de8-4083-a909-9f0ab13af1c6/resourceGroups/network_rg/providers/Microsoft.Network/virtualNetworks/network_vnet/subnets/network_subnet2",
                "name": "network_subnet2",
                "security_group": "/subscriptions/9d715255-9de8-4083-a909-9f0ab13af1c6/resourceGroups/network_rg/providers/Microsoft.Network/networkSecurityGroups/network-nsg2"
              }
            ],
            "tags": {
              "environment": "Test"
            }
          },
          "dependencies": [
            "azurerm_resource_group.network_rg"
          ]
        }
      ]
    }
  ]
}